# digit-recognizer

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
backend/: app.py
frontend/: index.html
model/: export.py  model.py  train.py
saved_model/: model.onnx  model.pth
