[tool.poetry]
name = "digit-recognizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = ""
packages = []  # disables packaging — no module will be included

# You can set this to restrict Python version
# but make sure it's compatible with your current system Python
# (you said you're using Python 3.12)
[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.35.0,<0.36.0"
pillow = ">=11.3.0,<12.0.0"
onnxruntime = ">=1.22.0,<2.0.0"
numpy = ">=2.3.1,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"

[tool.poetry.group.dev.dependencies]
torch = "^2.7.1"
torchvision = "^0.22.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
